--- a/app/globals.css
+++ b/app/globals.css
@@ -7,5 +7,11 @@ h1, p {
 }
 
 body {
-    font-family: var(--font-inter), sans-serif !important;
+    font-family: var(--font-inter), sans-serif !important
+}
+
+@layer utilities {
+    .nav-link {
+        @apply text-zinc-500 hover:text-zinc-900 transition-colors
+    }
 }
